# automoc

./: Automoc4CPack.cmake  Automoc4Config.cmake  Automoc4Config.cmake.in  Automoc4Nightly.cmake  Automoc4Version.cmake  AutomocNightly.cmake  CMakeLists.txt  CTestConfig.cmake  automoc.cpp  automoc.h  automoc4.files.in  automoc4_config.h.in  cmStandardIncludes.h  kde4automoc.cpp  main.cpp
cpack/: LICENSE.txt  README.txt
